Add explanation on how to use Colab

--- a/alexnet.ipynb
+++ b/alexnet.ipynb
@@ -24,7 +24,21 @@
     "\n",
     "In the remainder of this assignment, we will delve deeper into the inner workings of AlexNet. Since this assignment is designed to be accessible to undergraduate students without prior experience in programming or machine learning, certain concepts are intentionally explained at an abstract level. Although we provide code to make the assignment more interactive, it is not necessary to examine or understand the code in detail. Instead, it is recommended to focus on reading through the text and answering the questions provided in this notebook.\n",
     "\n",
-    "As a final note, it is recommened to a GPU in your runtime set-up in Colab; otherwise the code will run very slowly. To do this, go to `Runtime` -> `Change runtime type` -> `Hardware accelerator` -> `T4 GPU`. The `runtime` button can be found in the top menu of the Colab interface."
+    "\n",
+    "> ### How to Use This Notebook\n",
+    "> \n",
+    "> This notebook is hosted on Google Colab, a cloud-based platform that allows you to write and execute code in a computational notebook. The notebook is composed of text cells and code cells. The text cells provide explanations of the concepts, while the code cells contain the Python code that performs various functions.\n",
+    "> \n",
+    "> **How to Run a Code Cell**\n",
+    "> \n",
+    "> To run a code cell in Google Colab:\n",
+    "> 1. **Click on the code cell** to select it.\n",
+    "> 2. **Press the \"Run\" button** (a play icon) at the left of the code cell, or use the keyboard shortcut **`Shift + Enter`** to execute the code.\n",
+    "> 3. The output will be displayed directly below the code cell.\n",
+    "> \n",
+    "> For a more comprehensive guide on using Google Colab, you can check out the official [Google Colab Documentation](https://colab.research.google.com/notebooks/intro.ipynb).\n",
+    "> \n",
+    "> As a final note, it is recommended to use a GPU in your runtime setup in Colab; otherwise, the code may run very slowly. To do this, go to `Runtime` -> `Change runtime type` -> `Hardware accelerator` -> `T4 GPU`. The `Runtime` button can be found in the top menu of the Colab interface."
    ]
   },
   {
